Fix error text color for dark mode.
Don't alter --color-danger since that color works fine as a backdrop for the Toast Message.

--- a/ui/scss/themes/dark.scss
+++ b/ui/scss/themes/dark.scss
@@ -19,7 +19,7 @@
   --color-text-help: #bbbbbb;
   --color-text-warning: #212529;
   --color-text-warning--background: var(--lbry-yellow-1);
-  --color-text-error: var(--color-danger);
+  --color-text-error: #f87171;
   --color-error: var(--color-danger-alt);
 
   // Header
